--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "ext-pdo": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
-    "squizlabs/php_codesniffer": "^3.7"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
@@ -30,8 +29,6 @@
     }
   },
   "scripts": {
-    "test": "phpunit tests/",
-    "cs-check": "phpcs --standard=PSR12 src/ tests/",
-    "cs-fix": "phpcbf --standard=PSR12 src/ tests/"
+    "test": "phpunit tests/"
   }
 }
